Added the add_expense page, filled out the form, button from Expenses page is working.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyAquariumApp</string>
+    <string name="title_activity_expenses">Expenses</string>
 </resources>
